[gd_scene load_steps=8 format=3 uid="uid://clnmvggd8ci0j"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_5e05m"]
[ext_resource type="Shader" path="res://scripts/pause.gdshader" id="1_o2aw7"]
[ext_resource type="FontFile" uid="uid://ccjnwyp83pnjs" path="res://assets/fonts/PixelOperator8.ttf" id="2_1arpw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tvclv"]
shader = ExtResource("1_o2aw7")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_ckqqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kxmch"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3oeu"]
_data = {
"RESET": SubResource("Animation_ckqqn"),
"blur": SubResource("Animation_kxmch")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5e05m")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tvclv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -153.5
offset_right = 240.0
offset_bottom = 153.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1arpw")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "RESUME"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1arpw")
text = "RESTART"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1arpw")
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3oeu")
}

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
